[gd_scene load_steps=6 format=3 uid="uid://dowad7ccj5e80"]

[ext_resource type="Script" uid="uid://cw3fteqsclx7k" path="res://scenes/Objects/House/house.gd" id="1_48j7s"]
[ext_resource type="Texture2D" uid="uid://dcd1sn4sm1s10" path="res://assets/art/TinyFarm/Objects/House.png" id="1_uqlga"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_uqlga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqlga"]
size = Vector2(252, 118)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r5kem"]
radius = 15.0
height = 72.0

[node name="House" type="RigidBody2D"]
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_uqlga")
gravity_scale = 0.0
script = ExtResource("1_48j7s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(22.250004, 0)
scale = Vector2(3.5779223, 3)
texture = ExtResource("1_uqlga")
region_enabled = true
region_rect = Rect2(146.5, 0, 77.5, 112)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(17, -10)
shape = SubResource("RectangleShape2D_uqlga")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(59, 82)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_r5kem")

[node name="PromptUse" type="Label" parent="."]
visible = false
offset_left = 116.0
offset_top = 52.0
offset_right = 185.0
offset_bottom = 75.0
text = "Press \"E\""

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
